logs/pyppeteer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/astunparse'...
Listing './lib/python3.5/site-packages/autopep8-1.3.3.egg-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/example'...
Listing './lib/python3.5/site-packages/example/example'...
Compiling './lib/python3.5/site-packages/example/example/main.py'...
***   File "./lib/python3.5/site-packages/example/example/main.py", line 2
    return f'something {what}'
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/example/out'...
Listing './lib/python3.5/site-packages/example/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_backwards'...
Listing './lib/python3.5/site-packages/py_backwards/transformers'...
Listing './lib/python3.5/site-packages/py_backwards/utils'...
Listing './lib/python3.5/site-packages/py_backwards-0.7.dist-info'...
Listing './lib/python3.5/site-packages/py_backwards_astunparse-1.5.0.post3.egg-info'...
Listing './lib/python3.5/site-packages/pycodestyle-2.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pyee'...
Listing './lib/python3.5/site-packages/pyee-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyppeteer'...
Listing './lib/python3.5/site-packages/pyppeteer-0.0.9.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/typed_ast'...
Listing './lib/python3.5/site-packages/typed_ast-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/websockets'...
Listing './lib/python3.5/site-packages/websockets/extensions'...
Listing './lib/python3.5/site-packages/websockets/py35'...
Listing './lib/python3.5/site-packages/websockets-4.0.1.dist-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
